After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670561 - pulse: Missing return value in ext/pulse/pulseaudiosink.c
pulse: Missing return value in ext/pulse/pulseaudiosink.c
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.10.x
Other Linux
: Normal normal
: 0.10.32
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-21 17:13 UTC by Vincent Untz
Modified: 2012-02-21 20:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pulse: Fix a build warning when compiling with asserts disabled (873 bytes, patch)
2012-02-21 17:13 UTC, Vincent Untz
committed Details | Review

Description Vincent Untz 2012-02-21 17:13:10 UTC
Similarly to bug 670548, gst-plugins-good has a warning that is annoying when building openSUSE package.
Comment 1 Vincent Untz 2012-02-21 17:13:54 UTC
Created attachment 208155 [details] [review]
pulse: Fix a build warning when compiling with asserts disabled

Return a value even if the code will never be reached, to make compilers
happy.
Comment 2 Tim-Philipp Müller 2012-02-21 20:14:53 UTC
Thanks. I've removed the assert then - no point really if we print a warning already (and it's all code in our control anyway, so shouldn't happen unless someone adds new properties).

 commit a32e030faadeb538b05ecc7920d74db9efedf4d4
 Author: Vincent Untz <vuntz@gnome.org>
 Date:   Tue Feb 21 17:57:44 2012 +0100

    pulse: Fix a build warning when compiling with asserts disabled
    
    Return a value even if the code will never be reached, to make compilers
    happy.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=670561