pulse: Fix a build warning when compiling with asserts disabled

Return a value even if the code will never be reached, to make compilers
happy.

https://bugzilla.gnome.org/show_bug.cgi?id=670561